# django_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
static/css/: responsive.css  style.css
static/fonts/fontawesome/css/: all.min.css
static/fonts/icomoon/fonts/: icomoon.svg_8j3g3r
static/js/: script.js
static/js/vendors/: jquery.counterup.min.js
store/: urls.py
templates/: base.html  footer.html  header.html  index.html
users/: admin.py  forms.py  manager.py  models.py
users/migrations/: 0001_initial.py  0002_client.py
utils/: manager.py  model_behaviour.py
